tests/bad_programs/type_errors/return_int_div_bool.nc
int main() {
    return 676 / true;
}
